0.9.0 (unreleased)
------------------
 - Fix regression when initializing soap objects with invalid kwargs.


0.8.1 (2016-06-08)
------------------
 - Use the operation name for the xml element which wraps the parameters in 
   for soap RPC messages (#60)


0.8.0 (2016-06-07)
------------------
 - Add ability to override the soap endpoint via `Client.set_address()`
 - Fix parsing ComplexTypes which have no child elements (#50)
 - Handle xsi:type attributes on anyType's correctly when deserializing 
   responses (#17)
 - Fix xsd:restriction on xsd:simpleType's when the base type wasn't defined
   yet. (#59)
 - Add xml declaration to the generate xml strings (#60)
 - Fix xsd:import statements without schemaLocation (#58)


0.7.1 (2016-06-01)
------------------
 - Fix regression with handling wsdl:import statements for messages (#47)


0.7.0 (2016-05-31)
------------------
 - Add support HTTP authentication (mcordes). This adds a new attribute to the
   Transport client() which passes the http_auth value to requests. (#31)
 - Fix issue where setting cache=None to Transport class didn't disable 
   caching.
 - Refactor handling of wsdl:imports, don't merge definitions but instead 
   lookup values in child definitions. (#40)
 - Remove unused namespace declarations from the generated SOAP messages.
 - Update requirement of six>=1.0.0 to six>=1.9.0 (#39)
 - Fix handling of xsd:choice, xsd:group and xsd:attribute (#30)
 - Improve error messages
 - Fix generating soap messages when sub types are used via xsd extensions (#36)
 - Improve handling of custom soap headers (#33)


0.6.0 (2016-05-21)
------------------
 - Add missing `name` attributes to xsd.QName and xsd.NOTATION (#15)
 - Various fixes related to the Choice element
 - Support xsd:include
 - Experimental support for HTTP bindings
 - Removed `Client.get_port()`, use `Client.bind()`.


0.5.0 (2015-05-08)
------------------
 - Handle attributes during parsing of the response values>