@@ -20,6 +20,8 @@ def parse_arguments(args=None):
     parser.add_argument(
         '--cache', action='store_true', help='Enable cache')
     parser.add_argument(
+        '--no-verify', action='store_true', help='Disable SSL verification')
+    parser.add_argument(
         '--verbose', action='store_true', help='Enable verbose output')
     parser.add_argument(
         '--profile', help="Enable profiling and save output to given file")
@@ -57,7 +59,12 @@ def main(args):
         profile.enable()
 
     cache = SqliteCache(persistent=args.cache)
-    transport = Transport(cache=cache)
+    transport_kwargs = {'cache': cache}
+
+    if args.no_verify:
+        transport_kwargs['verify'] = False
+
+    transport = Transport(**transport_kwargs)
     st = time.time()
     client = Client(args.wsdl_file, transport=transport)
     logger.debug("Loading WSDL took %sms", (time.time() - st) * 1000)
