@@ -1,6 +1,7 @@
 0.9.0 (unreleased)
 ------------------
  - Fix regression when initializing soap objects with invalid kwargs.
+ - Add '--no-verify' to the command line interface. (#63)
 
 
 0.8.1 (2016-06-08)
